--- a/visual_translations/static/visual_translations/css/knob.css
+++ b/visual_translations/static/visual_translations/css/knob.css
@@ -1,7 +1,35 @@
-/*----------------------------
-	knobKnob Styles
------------------------------*/
+#knob-component {
+	height: 212px;
+	margin: 0 auto;
+	position: relative;
+	width: 228px;
+}
 
+#control{
+	width:90px;
+	height:90px;
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin:-45px 0 0 -45px;
+}
+
+.knobLabel{
+	width:70px;
+    text-align: center;
+	height:8px;
+	position:absolute;
+    color: lightgray;
+	/*opacity:1;*/
+	/*-moz-transition:0.3s;*/
+	/*-webkit-transition:0.3s;*/
+	/*-o-transition:0.3s;*/
+	/*transition:0.3s;*/
+}
+
+.knobLabel.active{
+	color: black;
+}
 
 .knob{
 	width:83px;
@@ -15,7 +43,6 @@
 	left:0;
 	width:83px;
 	height:83px;
-	background:url('knob.png') no-repeat;
 	z-index:10;
 	cursor:default !important;
 }
