--- a/visual_translations/static/visual_translations/css/knob.css
+++ b/visual_translations/static/visual_translations/css/knob.css
@@ -1,11 +1,11 @@
-#knob-component {
+#knob-component, #arrows-component {
 	height: 212px;
 	margin: 0 auto;
 	position: relative;
 	width: 228px;
 }
 
-#control{
+#control {
 	width:90px;
 	height:90px;
 	position:absolute;
@@ -14,7 +14,7 @@
 	margin:-45px 0 0 -45px;
 }
 
-.knobLabel{
+.knobLabel, .arrow{
 	width:70px;
     text-align: center;
 	height:8px;
@@ -27,7 +27,7 @@
 	/*transition:0.3s;*/
 }
 
-.knobLabel.active{
+.knobLabel.active {
 	color: black;
 }
 
