--- a/visual_translations/static/visual_translations/css/controller.css
+++ b/visual_translations/static/visual_translations/css/controller.css
@@ -1,3 +1,18 @@
+body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+#main {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 #words {
     background-color: red;
 }
