Ok, sized round components.

--- a/visual_translations/static/visual_translations/css/controller.css
+++ b/visual_translations/static/visual_translations/css/controller.css
@@ -12,6 +12,17 @@ body {
     display: table-cell;
     vertical-align: middle;
 }
+.no-gutter.row,
+.no-gutter.container,
+.no-gutter.container-fluid{
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.no-gutter>[class^="col-"]{
+  padding-left: 0;
+  padding-right: 0;
+}
 
 #words {
     background-color: red;
