--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -11,6 +11,9 @@
     .knob .top {
         background: url('{% static "visual_translations/img/knob.png" %}') no-repeat;
     }
+    .knob .top:after {
+        background: url('{% static "visual_translations/img/pointer.png" %}') no-repeat;
+    }
     .arrow {
         background: url('{% static "visual_translations/img/triangle.png" %}') no-repeat center center;
     }
