Fix the word pointer rotation.

--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -9,7 +9,7 @@
     <style>
     /* Styling fed by Django */
     .knob .top {
-        background: url('{% static "visual_translations/img/knob.png" %}') no-repeat;
+        background: url('{% static "visual_translations/img/knob.png" %}') no-repeat center;
     }
     .knob .top:after {
         background: url('{% static "visual_translations/img/pointer.png" %}') no-repeat;
