Adjust zoom controller behaviour.

--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -35,7 +35,7 @@
             change: function(event, ui) {
                 console.log(ui.value);
             },
-            max: 2  // counts from 0
+            max: 100
         });
     </script>
 {% endblock %}
