--- a/visual_translations/static/visual_translations/css/controller.css
+++ b/visual_translations/static/visual_translations/css/controller.css
@@ -25,11 +25,11 @@ body {
 }
 
 #words {
-    background-color: red;
+    /*background-color: red;*/
 }
 
 #arrows {
-    background-color: purple;  /* test */
+    /*background-color: purple;*/
 }
 #arrows button {
     display: block;
@@ -37,7 +37,7 @@ body {
 }
 
 #zoom {
-    background-color: #ffff00;
+    /*background-color: #ffff00;*/
     min-height: 500px;
 }
 #zoom-component {
@@ -46,9 +46,30 @@ body {
     margin: 0 auto;
     height: 340px;
 }
+#zoom-component:before {
+    font-size: 72px;
+    content: '+';
+    position: relative;
+    top: -100px;
+    left: -14px;
+}
+#zoom-component:after {
+    font-size: 72px;
+    content: '\2212';
+    position: relative;
+    bottom: -220px;
+    left: -14px;
+}
 .ui-slider .ui-slider-handle {
     width: 72px;
     height: 2em;
     left: -2em;
+    background: #000;
+    border: none;
+    outline: none;
+}
+.ui-widget-content {
+    background: #000;
+    border: none;
 }
 
