Change broadcast selector to broadcast on arrow press.

--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -84,7 +84,7 @@
     }
 
     $(function(){
-        $broadcast = $('#broadcast');
+        $broadcast = $('.arrow');
         $broadcast.on({'mousedown touchstart': function(event){
             console.log("mouse down");
             send_message("top-left");
