Make the static IP depend on the setup.

--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -42,7 +42,7 @@
 
         window.VT = {};
         var wsEndpointURI = new URI("{{ WEBSOCKET_URI }}visual-translations-map?subscribe-broadcast&publish-broadcast");
-        wsEndpointURI.hostname("192.168.255.16");
+        wsEndpointURI.hostname("{{ STATIC_IP }}");
         VT.webSocketEndpoint = wsEndpointURI.toString();
         VT.webSocketHeartbeat = {{ WS4REDIS_HEARTBEAT }};
 
