Remove scrollbars from the map.

--- a/visual_translations/templates/visual_translations/map.html
+++ b/visual_translations/templates/visual_translations/map.html
@@ -136,6 +136,7 @@
             left: 0;
             overflow: scroll !important;
         }
+        body::-webkit-scrollbar { width: 0 !important }
 
     </style>
 {% endblock %}
