--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -14,6 +14,10 @@
         .arrow {
             background: url('{% static "visual_translations/img/triangle.png" %}') no-repeat center center;
         }
+        .arrow.active {
+            background: url('{% static "visual_translations/img/triangle-grey.png" %}') no-repeat center center;
+
+        }
     </style>
 {% endblock %}
 
