--- a/future_fashion/templates/future_fashion/ok.html
+++ b/future_fashion/templates/future_fashion/ok.html
@@ -4,15 +4,9 @@
 {% block body %}
 
     <div>
-        {% for page in response.results %}
-            <h4>{{ page.title }}</h4>
-            <p>
-                Revisions: {{ page.revisions | length }}<br/>
-                Categories: {{ page.categories | length }}<br/>
-                Rank: {{ page.ds_rank }}<br/>
-                Wikipedia: <a href="https://en.wikipedia.org/wiki/{{ page.title }}">{{ page.title }}</a><br/>
-                Wikidata: <a href="https://www.wikidata.org/wiki/{{ page.wikidata.wikidata }}">{{ page.wikidata.wikidata }}</a>
-            </p>
+        {% for image in response.results %}
+            <h4>{{ image.name }}</h4>
+            <a href="{{ request.path }}?$euclidian_distance=1&$reference={{ image.id }}"><img src="{{ image.url }}"/></a>
         {% endfor %}
     </div>
 
