--- a/visual_translations/templates/visual_translations/map.html
+++ b/visual_translations/templates/visual_translations/map.html
@@ -139,6 +139,10 @@
         }
         body::-webkit-scrollbar { width: 0 !important }
 
+        #help-screen {
+            height: 1000px;
+        }
+
     </style>
 {% endblock %}
 
