--- a/visual_translations/static/visual_translations/css/visual-translations.css
+++ b/visual_translations/static/visual_translations/css/visual-translations.css
@@ -4,16 +4,20 @@ html {
 }
 
 #help-screen {
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 1000px;
+    height: 100%;
     z-index: 100;
 
     color: white;
     background-color: black;
     opacity: .75;
+}
+#help-screen.active {
+    display: block;
 }
 #help-screen h1 {
     line-height: 1.618;
@@ -22,4 +26,16 @@ html {
 }
 #word-highlight {
     text-transform: uppercase;
+}
+#help-button {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 72px;
+    line-height: 72px;
+    font-weight: 900;
+}
+#help-button a {
+    color: black;
+    text-decoration: none;
 }
