Remove JS from the template.

--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -47,7 +47,7 @@
 {% block body %}
 
     <div id="help-button">
-        <a href="#" onclick="$('#help-screen').addClass('active');">?</a>
+        <a href="#">?</a>
     </div>
 
     <section id="main" class="container-fluid">
@@ -74,7 +74,7 @@
         </div>
     </section>
 
-    <div id="help-screen" onclick="$(this).removeClass('active')" class="active">
+    <div id="help-screen" class="active">
         <h1>
             images originating from a country <br/>
             are shown inside the country borders<br/>
