Start help screen by default.

--- a/visual_translations/templates/visual_translations/map.html
+++ b/visual_translations/templates/visual_translations/map.html
@@ -285,7 +285,7 @@
         </defs>
     </svg>
 
-    <div id="help-screen">
+    <div id="help-screen" class="active">
         <h1>
             discover how images<br/>
             when searching for "<span id="word-highlight"></span>"<br/>
